crates/plotnik-lib/tests/02-parser/recovery_unclosed/unclosed_single_quote_string.txt
Q = (call 'foo)
------------------ DIAGNOSTICS -------------------
error: unterminated string
 --> query.ptk:1:11
  |
1 | Q = (call 'foo)
  |           ^^^^^
  |
help: anonymous nodes match literal tokens; close the quote: `"foo"`
